lib_LTLIBRARIES = libbulwark.la
libbulwark_la_CFLAGS = -I$(abs_top_builddir)/include -I$(top_srcdir)/include -std=c89 -Wall -Werror

libbulwark_la_SOURCES = \
  Bulwark.c \
  Color.c \
  Event.c \
  EventQueue.c \
  Window.c \
  Input.c \
  Internal.h \
  Log.c \
  BufferChangeList.c \
  Buffer.c \
  Sound.c
